force-app/main/default/objects/Enterprise_Installed_Base__c/Enterprise_Installed_Base__c.object-meta.xml
<CustomObject>
    <label>Enterprise Infrastructure Attach</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Enterprise Infrastructure Attach ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise Infrastructure Attach</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>