force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Enterprise_infrastructure_Attach</relationshipName>
    <type>Lookup</type>
</CustomField>