force-app/main/default/objects/Enterprise_Installed_Base__c/fields/AttachPrice__c.field-meta.xml
<CustomField>
    <fullName>AttachPrice__c</fullName>
    <label>AttachPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>