force-app/main/default/objects/Enterprise_Installed_Base__c/fields/AttachSKU__c.field-meta.xml
<CustomField>
    <fullName>AttachSKU__c</fullName>
    <label>AttachSKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>