force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Lattice_Play__c.field-meta.xml
<CustomField>
    <fullName>Lattice_Play__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lattice Play</label>
    <referenceTo>LBI__Play__c</referenceTo>
    <relationshipName>Enterprise_Installed_Base</relationshipName>
    <type>Lookup</type>
</CustomField>