force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Enterprise_Installed_Base</relationshipName>
    <type>Lookup</type>
</CustomField>