force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Pipeline/Quotation/Order Number</description>
    <label>Pipeline/Quotation/Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>