force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Recommended_Attach_SKU__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Attach_SKU__c</fullName>
    <description>SKU Name</description>
    <label>Recommended / Attach SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>