force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Recommended_Attach_SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Attach_SKU_Name__c</fullName>
    <description>SKU #</description>
    <label>Recommended / Attach SKU #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>