force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Recommended_LOB__c.field-meta.xml
<CustomField>
    <fullName>Recommended_LOB__c</fullName>
    <description>Recommended LOB</description>
    <label>Recommended LOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>