force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Recommended_Price__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Price__c</fullName>
    <description>Price</description>
    <label>Recommended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>