force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Recommended_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Type__c</fullName>
    <description>Recommended Type</description>
    <label>Recommended Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>