force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Installbase Revenue</description>
    <label>Installbase Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>