force-app/main/default/objects/Enterprise_Installed_Base__c/fields/Tag_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Tag_Serial_Number__c</fullName>
    <label>Tag/Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>